<resources>
    <string name="app_name">МЧС Пожары</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quProinfo">Количество проинструктированных</string>
    <string name="job">Должность</string>
    <string name="child">Из них детей</string>
    <string name="time">Время</string>
    <string name="adress">Адрес</string>
    <string name="regon">Район</string>
    <string name="vid">Вид объекта</string>
    <string name="theme_profilactiv">Тема профилактического мероприятия</string>
    <string name="q_people">Введите общее количество людей</string>
    <string name="q_child">Введите количество детей</string>
    <string name="FIO">ФИО</string>
    <string name="region">Район</string>
    <string name="time_dont_edit">Время редактировать нельзя</string>
    <string name="put_adress">Введите адрес</string>
    <string name="send">Отправить</string>
    <string name="profile">Профиль</string>
    <string name="dolzhnost">Должность</string>
    <string name="cod_region">Код региона, район</string>
    <string name="name_user">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="save">Сохранить</string>
    <string name="after_edit_sing_up_in_account">После изменений перезайдите в аккаунт</string>
    <string name="sing_in">Зарегистрироваться</string>
    <string name="sign_up">Войти</string>
    <string name="password2">Пароль</string>
    <string name="Sign">Вход</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="region3">Регион</string>
    <string name="name_user2">Имя пользователя</string>
    <string name="username2">username</string>
    <string name="For_edit">Для того чтобы отредактировать данные вашего профиля, вам необходимо перезайти в аккаунт. Это было сделано в целях безопасности.</string>
    <string name="Edit_data">Редактировать профиль</string>
    <string name="data">Ввести данные</string>
    <string name="exit">Выход</string>
    <string name="reg">Регистрация</string>
    <string name="show_who">Должность</string>
    <string name="exaple_1">Например: Инспекторский состав ФГПН</string>
    <string name="code">Код региона, район</string>
    <string name="exaple_2">Например: 52, Арзамас</string>
    <string name="exaple_3">Например: Иванов Иван Иванович</string>
    <string name="exaple_4">Например: Qd1nnM</string>
    <string name="to_do">Создать</string>
    <string name="already_have">Уже есть аккаунт? Войти</string>
    <string name="id_nam">Номер по порядку</string>
    <string name="password5">password</string>
    <string name="pas">Пароль</string>
</resources>